# books-rag

./: .env.example  .gitignore  BookRAG_SystemDesign.docx  Dockerfile  README.md  alembic.ini  docker-compose.yml  prompt-sample.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_chapter_type.py
bookrag/: __init__.py  config.py  worker.py
bookrag/agent/: generator.py  loop.py  memory.py
bookrag/api/: __init__.py  schemas.py  server.py
bookrag/cli/: main.py
bookrag/db/: models.py  session.py
bookrag/ingestion/: chunker.py  embedder.py  extractor.py  worker.py
bookrag/quality/: grounding.py
bookrag/retrieval/: bm25.py  cache.py  reranker.py  rewriter.py  router.py  searcher.py
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
tests/: test_chunker.py  test_embedder.py  test_extractor.py  test_router.py
